--- a/erpnext/hr/doctype/language_known/language_known.json
+++ b/erpnext/hr/doctype/language_known/language_known.json
@@ -146,10 +146,10 @@
  "issingle": 0, 
  "istable": 1, 
  "max_attachments": 0, 
- "modified": "2019-04-29 11:50:02.835269", 
+ "modified": "2019-05-11 11:57:26.270799", 
  "modified_by": "Administrator", 
  "module": "HR", 
- "name": "Language Know", 
+ "name": "Language Known", 
  "name_case": "", 
  "owner": "Administrator", 
  "permissions": [], 
